[package]
name = "taffy-uniffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "taffy"

[dependencies]
uniffi = { version = "0.25" }
taffy = { version = "0.4" }
thiserror = { version = "1.0" }

[build-dependencies]
uniffi = { version = "0.25", features = [ "build" ] }

[bindings.csharp]
cdylib_name = "taffy"